# newsnow_neon

./: .gitignore  CHANGELOG.md  LICENSE  README-DEV.md  README.md  __init__.py  application.py  cache.py  highlight.py  legacy_app.py  main.py  models.py  pyproject.toml  summaries.py  ui.py  utils.py
docs/: manual-gui-smoke-checklist.md  options-audit.md  product-ssot.md
newsnow_neon/: __init__.py  __main__.py  application.py  browser_launcher.py  config.py  http_client.py  legacy_app.py  main.py  models.py  settings_store.py  summaries.py  ui.py  utils.py
newsnow_neon/app/: __init__.py  actions.py  controller.py  filtering.py  rendering.py  services.py  timeutils.py
newsnow_neon/app/controller/: __init__.py  auto_refresh_controller.py  background_watch_controller.py  exclusions_controller.py  highlight_controller.py  history_controller.py  redis_controller.py  refresh_controller.py  selection_controller.py  settings_controller.py
newsnow_neon/app/helpers/: app_helpers.py  env_helpers.py
newsnow_neon/app/renderers/: list_renderer.py
newsnow_neon/app/services/: __init__.py  cache_service.py  news_service.py  redis_service.py  summary_service.py
newsnow_neon/app/ui/: history_ui.py  ui_helpers.py
newsnow_neon/app/views/: action_bar.py  controls_panel.py  highlight_panel.py  history_panel.py  list_view.py  logs_panel.py  options_panel.py  search_filters.py  ticker_panel.py
newsnow_neon/ui/: __init__.py
tests/: conftest.py  test_bootstrap.py  test_browser_launcher.py  test_main_metadata.py  test_settings_behavior.py  test_utils.py
(+5 files in other folders)
